# NoNameYetEngine

./: .exrc  .gitignore  Build-Make-win.sh  Build-Make.sh  BuildVars.h  CMakeLists.txt  Clean.sh  Makefile  Notes  README  README.md  Research  ShaderDoc  TodoChecklist
cmake/: FindAssimp.cmake  FindGLEW.cmake  FindGLFW.cmake  FindSDL2.cmake  FindSDL_image.cmake  FindSOIL.cmake
doc/: Conventions.doc  Conventions.md  Notes  Research  ShaderDoc  TodoChecklist
install/lib/cmake/glfw3/: glfw3Targets.cmake
install/lib/pkgconfig/: assimp.pc  glew.pc  glfw3.pc
install/lib64/: libGLEW.so.2.0.0
res/: out.txt
res/mesh/: sponza.mtl
res/shader/: CookTorrence.glsl  FragmentHeader.glsl  GeometryFragment.glsl  GeometryVertex.glsl  Header.glsl  NormalPassFragment.glsl  NormalPassVertex.glsl  VertexHeader.glsl  d_light.glsl  geom.glsl  geomv.glsl  p.glsl  p_light.glsl  p_lightv.glsl  pos.glsl  post.glsl  pv.glsl  shadowv.glsl
src/: AbstractGame.cpp  AbstractGame.h  Engine.cpp  Engine.h  main.cpp
src/core/: Console.cpp  Console.h  Event.cpp  Event.h  EventDefine.h  Input.cpp  Input.h  Kernel.cpp  Kernel.h  Window.cpp  Window.h
src/example/: TestGame.cpp  TestGame.h
src/memory/: FrameAllocator.h  FrameAllocatorDefine.h  FrameMemory.cpp  FrameMemory.h  MemAllocator.h  MemAllocatorDefine.h  Memory.cpp  Memory.h  StackAllocator.h  StackBuffer.cpp  StackBuffer.h
src/physics/: PhysicsEngine.cpp  PhysicsEngine.h
src/rendering/: AbstractRenderEngine.cpp  AbstractRenderEngine.h  BaseRenderEngine.cpp  BaseRenderEngine.h  Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  GBuffer.cpp  GBuffer.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Particle.h  PostProcess.cpp  PostProcess.h  RenderEngine.cpp  RenderEngine.h  RenderObject.h  RenderQueue.cpp  RenderQueue.h  RenderinEngine.cpp  RenderinEngine.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h
src/rescources/: BitMap.cpp  BitMap.h
src/util/: Debug.h  HName.h  HNameDefine.h  Log.cpp  Log.h  MacroUtil.h  Math3D.h  Math3DDefine.h  Misc.cpp  Misc.h  MiscDefine.h  Profile.cpp  Profile.h  Types.h
